tests/failed/04-excepted-endian.stderr
error: excepted endian
 --> $DIR/04-excepted-endian.rs:4:1
  |
4 | #[endian()]
  | ^^^^^^^^^^^
